syntax = "proto3";

package user;

service PostService {
    rpc CreatePost(Post) returns (Post);
    rpc GetPostById(GetByPostIdRequest) returns (Post);
    rpc GetAllUserPosts(GetUserPostsrequest) returns (GetUserPosts);
    rpc GetAllPostList(GetPostRequest) returns (GetPostResponse);
}

message GetPostRequest {
    int64 limit = 1;
    int64 page = 2;
}

message GetPostResponse {
    repeated Post posts = 1;
    int64 count = 2;
}

message GetUserPosts {
    repeated Post posts = 1;
}

message Empty {
}

message GetUserPostsrequest {
    string user_id = 1;
}

message GetByPostIdRequest {
    string user_id = 1;
}

message Post {
    string id = 1;
    string name = 2;
    string description = 3;
    string user_id = 4;
    repeated Media medias = 5;
}

message Media {
    string id = 1;
    string type = 2;
    string link = 3;
}